fixed spacing on login signup windows

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -37,6 +37,7 @@ body {
   max-width: 450px;
   position: relative;
   padding: 0px;
+  margin: 4em;
   -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   text-align: center;
@@ -91,7 +92,7 @@ body {
 }
 
 .login-button:hover {
-  background-color: #315b5e;
+  background-color: #97481a;
 }
 
 .login-input {
